Another attempt to fix scroll on mobile

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -11,6 +11,6 @@
 }
 
 :global(html) {
-	height: 100vh;
+	height: 100%;
 	background: variables.$neutral-500;
 }
